api register + init swagger
