# internal/models/user.go
@@ -2,32 +2,40 @@ package models
 
 import (
 	"strings"
+	"time"
 
 	"golang.org/x/crypto/bcrypt"
-	"gorm.io/gorm"
 )
 
 const (
 	Customer   = "customer"
 	Consultant = "consultant"
+	Admin      = "admin"
 )
 
-// User model for GORM
 type User struct {
-	gorm.Model
-	Role           string          `gorm:"size:20;not null" json:"role" binding:"required,oneof=customer consultant" validate:"required,oneof=customer consultant"`
-	Name           string          `gorm:"size:100;not null" json:"name" binding:"required,min=2,max=100" validate:"required,min=2,max=100"`
-	Email          string          `gorm:"size:100;uniqueIndex;not null" json:"email" binding:"required,email" validate:"required,email"`
-	Password       string          `gorm:"not null" json:"password" binding:"required,min=6" validate:"required,min=6"`
-	Phone          *string         `gorm:"size:15" json:"phone" binding:"omitempty,e164" validate:"omitempty,e164"`
-	Avatar         string          `gorm:"type:text;null" json:"avatar" binding:"omitempty" validate:"omitempty"`
-	Status         string          `gorm:"size:20" json:"status" binding:"omitempty,oneof=active inactive banned" validate:"omitempty,oneof=active inactive banned"`
-	Profile        *Profile        `gorm:"foreignKey:ConsultantID;constraint:OnDelete:CASCADE" json:"profile,omitempty" binding:"-" validate:"-"`
-	Certifications []Certification `gorm:"foreignKey:ConsultantID;constraint:OnDelete:CASCADE" json:"certifications,omitempty" binding:"-" validate:"-"`
-	Followers      []Follow        `gorm:"foreignKey:FollowingID" json:"-" binding:"-" validate:"-"`
-	Following      []Follow        `gorm:"foreignKey:FollowerID" json:"-" binding:"-" validate:"-"`
-	Post           []Post          `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE" json:"-" binding:"-" validate:"-"`
-	Comment        []Comment       `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE" json:"-" binding:"-" validate:"-"`
+	ID        uint       `gorm:"primaryKey;autoIncrement" json:"id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `gorm:"index" json:"deleted_at,omitempty"`
+
+	Role     string  `gorm:"size:20;not null" json:"role" binding:"required,oneof=customer consultant" validate:"required,oneof=customer consultant"`
+	Name     string  `gorm:"size:100;not null" json:"name" binding:"required,min=2,max=100" validate:"required,min=2,max=100"`
+	Email    string  `gorm:"size:100;uniqueIndex;not null" json:"email" binding:"required,email" validate:"required,email"`
+	Password string  `gorm:"not null" json:"password" binding:"required,min=6" validate:"required,min=6"`
+	Phone    *string `gorm:"size:15" json:"phone" binding:"omitempty,e164" validate:"omitempty,e164"`
+	Active   bool    `gorm:"default:true" json:"active" binding:"omitempty" validate:"omitempty"`
+
+	City       *string    `gorm:"size:100" json:"city,omitempty"`
+	Country    *string    `gorm:"size:100" json:"country,omitempty"`
+	Expertiese Expertiese `gorm:"foreignKey:ConsultantID;constraint:OnDelete:CASCADE" json:"expertiese,omitempty" binding:"-" validate:"-"`
+
+	Interests []Interest `gorm:"type:json" json:"interests,omitempty"`
+
+	Followers []Follow  `gorm:"foreignKey:FollowingID" json:"-" binding:"-" validate:"-"`
+	Following []Follow  `gorm:"foreignKey:FollowerID" json:"-" binding:"-" validate:"-"`
+	Post      []Post    `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE" json:"-" binding:"-" validate:"-"`
+	Comment   []Comment `gorm:"foreignKey:UserID;constraint:OnDelete:CASCADE" json:"-" binding:"-" validate:"-"`
 }
 
 // Hash user password with bcrypt
